Small spacing fix for the widget

--- a/css/guest-author-widget.styl
+++ b/css/guest-author-widget.styl
@@ -1,10 +1,10 @@
 .guest-author-widget
   padding 20px
+  margin-bottom 15px
   border 1px solid rgba(227,229,231,0.50)
   border-radius 3px
   background #FFFFFF
   animation-iteration-count 1
-  animation-direction forwards
   article
     position relative
 
